<resources>
    <string name="app_name">Music Player App</string>
    <string name="shuffle">Shuffle</string>
    <string name="favourites">Favourites</string>
    <string name="playlist">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_button">back button</string>
    <string name="add_to_favourite_button">Add To Favourite button</string>
    <string name="start_tv">00:00</string>
    <string name="loading">Loading</string>
    <string name="share_button">Share Button</string>
    <string name="timer_button">Timer Button</string>
    <string name="equalizer_button">equalizer button</string>
    <string name="repeat_button">Repeat Button</string>
    <string name="open">Open\n</string>
    <string name="close">close</string>
    <string name="app_icon">Icon</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="album_name">Album name</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_60_minutes">60 Minutes</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="playlist_name">Playlist Name</string>

</resources>