<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginBottom="5dp"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cover"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:src="@mipmap/ic_launcher"
        app:shapeAppearanceOverlay="@style/curved" />

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_toEndOf="@+id/cover"
       android:layout_marginStart="5dp"
       android:orientation="vertical">
       <TextView
           android:id="@+id/songName"
           android:layout_width="wrap_content"
           android:layout_marginEnd="15dp"
           android:layout_height="40dp"
           android:layout_marginStart="7dp"


           android:gravity="center"
           android:text="@string/song_name"
           android:textColor="@color/black" />

       <TextView
           android:id="@+id/songAlbum"
           android:layout_width="wrap_content"
           android:layout_height="20dp"
           android:layout_marginStart="7dp"

           android:text="@string/album_name"
           android:textColor="@color/black" />
   </LinearLayout>

    <TextView
        android:id="@+id/songDuration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/start_tv"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginHorizontal="5dp"/>
</RelativeLayout>