<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">
<LinearLayout
    android:layout_marginBottom="10dp"
    android:id="@+id/min_15"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"

    >
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/timer"
        app:tint="@color/cool_pink"


        />
    <TextView
        android:contentDescription="15 minutes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/_15_minutes"
        android:textColor="@color/black"
        android:layout_gravity="center_vertical"/>
</LinearLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer"
            app:tint="@color/cool_pink"


            />
        <TextView
            android:contentDescription="30 minutes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_30_minutes"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer"
            app:tint="@color/cool_pink"


            />
        <TextView
            android:contentDescription="60 minutes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_60_minutes"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>